--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,14 @@
         },
         {
             "type": "vcs",
+            "url":  "git@github.com:zoopcommerce/commerce-public-apis-module.git"
+        },
+        {
+            "type": "vcs",
+            "url":  "git@github.com:zoopcommerce/commerce-public-data-models-module.git"
+        },
+        {
+            "type": "vcs",
             "url":  "git@github.com:zoopcommerce/commerce-store-module.git"
         },
         {
@@ -57,32 +65,34 @@
         }
     ],
     "require": {
-        "php"                                       : ">=5.4",
-        "zendframework/zendframework"               : "2.3.1",
-        "aws/aws-sdk-php"                           : "2.*",
-        "codeguy/upload"                            : "dev-master#ff376306aacbd1005c7739dc171fae4edd96d8b7",
-        "doctrine/annotations"                      : "dev-master#a11349d39d85bef75a71bd69bd604ac4fb993f03 as dev-master",
-        "doctrine/doctrine-mongo-odm-module"        : "1.0.x-dev",
-        "doctrine/doctrine-module"                  : "1.0.x-dev as 1.0",
-        "doctrine/mongodb-odm"                      : "dev-hotfix719 as 1.0.0-BETA9",
-        "doctrine/orm"                              : "2.4.0-RC2",
-        "dompdf/dompdf"                             : "dev-master#03ad3265797a338dce2d7064edd0cb4ebedb052b as dev-master",
-        "ezyang/htmlpurifier"                       : "v4.5.0",
-        "imagine/imagine"                           : "~0.6",
-        "mashape/unirest-php"                       : "~1.2",
-        "melihucar/ftpclient"                       : "dev-master#faab472b1f3118d4926b3cbfc7d21c9cba255c0f as dev-master",
-        "sendgrid/sendgrid"                         : "~2.1",
-        "twig/twig"                                 : "1.*",
-        "willdurand/geocoder"                       : "2.4.*",
-        "zoopcommerce/commerce-api-module"          : "dev-master",
-        "zoopcommerce/commerce-common-module"       : "dev-master",
-        "zoopcommerce/commerce-company-module"      : "dev-master",
-        "zoopcommerce/commerce-partner-module"      : "dev-master",
-        "zoopcommerce/commerce-store-module"        : "dev-master",
-        "zoopcommerce/commerce-theme-module"        : "dev-master",
-        "zoopcommerce/commerce-user-module"         : "dev-master",
-        "zoopcommerce/gateway-module"               : "~2.0",
-        "zoopcommerce/shard-module"                 : "~4.0"
+        "php"                                               : ">=5.4",
+        "zendframework/zendframework"                       : "2.3.1",
+        "aws/aws-sdk-php"                                   : "2.*",
+        "codeguy/upload"                                    : "dev-master#ff376306aacbd1005c7739dc171fae4edd96d8b7",
+        "doctrine/annotations"                              : "dev-master#a11349d39d85bef75a71bd69bd604ac4fb993f03 as dev-master",
+        "doctrine/doctrine-mongo-odm-module"                : "1.0.x-dev",
+        "doctrine/doctrine-module"                          : "1.0.x-dev as 1.0",
+        "doctrine/mongodb-odm"                              : "dev-hotfix719 as 1.0.0-BETA9",
+        "doctrine/orm"                                      : "2.4.0-RC2",
+        "dompdf/dompdf"                                     : "dev-master#03ad3265797a338dce2d7064edd0cb4ebedb052b as dev-master",
+        "ezyang/htmlpurifier"                               : "v4.5.0",
+        "imagine/imagine"                                   : "~0.6",
+        "mashape/unirest-php"                               : "~1.2",
+        "melihucar/ftpclient"                               : "dev-master#faab472b1f3118d4926b3cbfc7d21c9cba255c0f as dev-master",
+        "sendgrid/sendgrid"                                 : "~2.1",
+        "twig/twig"                                         : "1.*",
+        "willdurand/geocoder"                               : "2.4.*",
+        "zoopcommerce/commerce-api-module"                  : "dev-master",
+        "zoopcommerce/commerce-common-module"               : "dev-master",
+        "zoopcommerce/commerce-company-module"              : "dev-master",
+        "zoopcommerce/commerce-partner-module"              : "dev-master",
+        "zoopcommerce/commerce-public-apis-module"          : "dev-master",
+        "zoopcommerce/commerce-public-data-models-module"   : "dev-master",
+        "zoopcommerce/commerce-store-module"                : "dev-master",
+        "zoopcommerce/commerce-theme-module"                : "dev-master",
+        "zoopcommerce/commerce-user-module"                 : "dev-master",
+        "zoopcommerce/gateway-module"                       : "~2.0",
+        "zoopcommerce/shard-module"                         : "~4.0"
     },
     "require-dev": {
         "phpunit/phpunit"           : ">=3.7",
