--- a/composer.json
+++ b/composer.json
@@ -33,11 +33,7 @@
         },
         {
             "type": "vcs",
-            "url":  "git@github.com:zoopcommerce/commerce-company-module.git"
-        },
-        {
-            "type": "vcs",
-            "url":  "git@github.com:zoopcommerce/commerce-partner-module.git"
+            "url":  "git@github.com:zoopcommerce/commerce-entity-module.git"
         },
         {
             "type": "vcs",
@@ -46,10 +42,6 @@
         {
             "type": "vcs",
             "url":  "git@github.com:zoopcommerce/commerce-public-data-models-module.git"
-        },
-        {
-            "type": "vcs",
-            "url":  "git@github.com:zoopcommerce/commerce-store-module.git"
         },
         {
             "type": "vcs",
@@ -84,15 +76,14 @@
         "willdurand/geocoder"                               : "2.4.*",
         "zoopcommerce/commerce-api-module"                  : "dev-master",
         "zoopcommerce/commerce-common-module"               : "dev-master",
-        "zoopcommerce/commerce-company-module"              : "dev-master",
-        "zoopcommerce/commerce-partner-module"              : "dev-master",
+        "zoopcommerce/commerce-entity-module"               : "dev-master",
         "zoopcommerce/commerce-public-apis-module"          : "dev-master",
         "zoopcommerce/commerce-public-data-models-module"   : "dev-master",
-        "zoopcommerce/commerce-store-module"                : "dev-master",
         "zoopcommerce/commerce-theme-module"                : "dev-master",
         "zoopcommerce/commerce-user-module"                 : "dev-master",
         "zoopcommerce/gateway-module"                       : "~2.0",
-        "zoopcommerce/shard-module"                         : "~4.0"
+        "zoopcommerce/shard-module"                         : "~4.0",
+        "zoopcommerce/maggott-module"                       : "dev-master#45bff381afda81c2e92855b5a4a739b627953673 as 1.1.1"
     },
     "require-dev": {
         "phpunit/phpunit"           : ">=3.7",
